# yourcontrolsinstaller

./: .gitignore  README.md  asset-manifest.json  index.html  index.tauri.html  package-lock.json  package.json  pnpm-lock.yaml
public/: index.html
redirect/: index.html
src/: App.css  App.js  stylesheet.css
src-tauri/: .gitignore  Cargo.toml  features.json  tauri.conf.json
src-tauri/src/: cmd.rs  downloader.rs  finder.rs  installer.rs  main.rs  sizegenerator.rs  util.rs
src/components/: Dialog.js  DirectoryEntry.js  FeatureList.js  Overlay.js
static/css/: main.1cee1e7e.chunk.css  main.1cee1e7e.chunk.css.map  main.3334d79b.chunk.css  main.3334d79b.chunk.css.map  main.4b9bb47a.chunk.css  main.4b9bb47a.chunk.css.map  main.69a90726.chunk.css  main.69a90726.chunk.css.map
static/js/: 2.1bbd2741.chunk.js  2.1bbd2741.chunk.js.map  2.c7e11686.chunk.js  2.c7e11686.chunk.js.map  2.fa9b2967.chunk.js  2.fa9b2967.chunk.js.map  3.28fef668.chunk.js  3.28fef668.chunk.js.map  3.a9097691.chunk.js  3.a9097691.chunk.js.map  main.0f3fc1b4.chunk.js  main.0f3fc1b4.chunk.js.map  main.8c00c82c.chunk.js  main.8c00c82c.chunk.js.map  main.8fe75154.chunk.js  main.8fe75154.chunk.js.map  main.d57226e6.chunk.js  main.d57226e6.chunk.js.map  main.dddbcc32.chunk.js  main.dddbcc32.chunk.js.map  main.f88c0b3a.chunk.js  main.f88c0b3a.chunk.js.map  runtime-main.621e3be3.js  runtime-main.621e3be3.js.map  runtime-main.bc1d21dd.js  runtime-main.bc1d21dd.js.map  runtime-main.f9355834.js  runtime-main.f9355834.js.map  runtime-main.fbddf58f.js  runtime-main.fbddf58f.js.map
yes/: index.tauri.html
