[package]
name = "yourcontrollinstaller"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "yourcontrollinstaller"
edition = "2018"
build = "src/build.rs"

[dependencies]
bytes = "0.5"
chrono = "0.4"
log = "0.4"
nfd = "0.0.4"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
simplelog = "0.8"
tauri = { version = "0.9", features = [ "all-api" ] }
winreg = "0.7"
zip = "0.5"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "yourcontrollinstaller"
path = "src/main.rs"
