[package]
name = "yourcontrolsinstaller"
version = "1.0.0"
description = "An automated installer to install YourControls."
authors = [ "Sequal32" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/Sequal32/yourcontrolsinstaller"
default-run = "installer"
edition = "2018"
build = "src/build.rs"

[dependencies]
attohttpc = { version = "0.16", features = [ "json" ] }
chrono = "0.4"
dirs = "3.0"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
simplelog = "0.8"
tauri = { version = "0.9", features = [ "all-api" ] }
winapi = "0.3"
winreg = "0.7"
zip = "0.5"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "installer"
path = "src/main.rs"
