[package]
name = "yourcontrolsinstaller"
version = "1.2.3"
description = "An automated installer to install YourControls."
authors = [ "Sequal32" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/Sequal32/yourcontrolsinstaller"
default-run = "installer"
edition = "2018"
build = "src/build.rs"

[dependencies]
attohttpc = { version = "0.19", features = [ "json" ] }
chrono = "0.4"
crossbeam-channel = "0.5"
dirs = "4.0"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simconnect = "0.1"
simplelog = "0.12"
tauri = { version = "0.11", features = [ "all-api" ] }
winapi = "0.3"
winreg = "0.10"
zip = "0.6"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "installer"
path = "src/main.rs"
